
CONFIGURE_FILE("config.h.in" "config.h")

FILE(GLOB XZ_SRCS *.c *.h *.rc)
FILE(GLOB XZ_SRCS_MSVC msvc/*.c msvc/*.h)
FILE(GLOB XZ_SRCS_CONFIG ${CMAKE_CURRENT_BINARY_DIR}/config.h)
FILE(GLOB XZ_SRCS_TUKLIB ../common/*.c ../common/*.h)

SOURCE_GROUP("" FILES ${XZ_SRCS})
SOURCE_GROUP("msvc" FILES ${XZ_SRCS_MSVC})
SOURCE_GROUP("config" FILES ${XZ_SRCS_CONFIG})
SOURCE_GROUP("tuklib" FILES ${XZ_SRCS_TUKLIB})

ADD_EXECUTABLE(xz
  ${XZ_SRCS}
  ${XZ_SRCS_CONFIG}
  ${XZ_SRCS_TUKLIB}
)

TARGET_LINK_LIBRARIES(xz
  lzma
)

TARGET_INCLUDE_DIRECTORIES(xz PRIVATE
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/msvc
)

SET_TARGET_PROPERTIES(xz PROPERTIES
  COMPILE_DEFINITIONS "HAVE_CONFIG_H"
)
